# logcoe

./: CMakeLists.txt  README.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml
cmake/: copy_mingw_dlls.cmake  utils.cmake
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md
include/: logcoe.hpp
src/: logcoe.cpp
tests/: CMakeLists.txt  logcoe_test.cpp  logcoe_thread_test.cpp  main.cpp
